@@ -1,5 +1,6 @@
 2008-10-02 Frank Naegler  <typo3@naegler.net>
-
+	
+	* some changes due to the refactoring of the group model 
 	* changed the method name from getAllMember to getMembers in tx_community_view_groupprofile_MemberList
 
 2008-10-05 Ingo Renner  <ingo@typo3.org>
